mocha/apps/rmfakecloud/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rmfakecloud
  annotations:
    cert-manager.io/cluster-issuer: cloudflare
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - rm.mocha.thoughtless.eu
      secretName: rm-tls
  rules:
    - host: rm.mocha.thoughtless.eu
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: rmfakecloud
                port:
                  number: 3000
